--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -92,6 +92,7 @@
   "mute_hashtags": { "message": "Add shortcuts to mute #hashtags in tweets' menu"},
   "hotlink_item": { "message": "Add shortcut to copy the links of all media in a tweet"},
   "download_item": { "message": "Add shortcut to download all media of a tweet"},
+  "download_filename_format": { "message": "Download file name format"},
 
   "btd_thx": { "message": "Thanks for installing Better TweetDeck!" },
   "btd_get_started": { "message": "Let's get started!" },
