:mushroom: Option to follow users upon ctrl+interacting with their tweets.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -94,6 +94,7 @@
   "download_item": { "message": "Add shortcut to download all media of a tweet"},
   "download_filename_format": { "message": "Download file name format"},
   "download_filename_format_parameters": { "message": "You can use the following variables: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code>"},
+  "ctrl_changes_interactions": { "message": "Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download / hotlink will follow the user from the column's owner."},
 
   "btd_thx": { "message": "Thanks for installing Better TweetDeck!" },
   "btd_get_started": { "message": "Let's get started!" },
