--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -90,6 +90,7 @@
 
   "favstar_item": { "message": "Ajouter un item \"Show on favstar\" dans le menu d'un tweets"},
   "mute_hashtags": { "message": "Ajouter des raccourcis pour filter les #hashtags dans le menu d'un tweet"},
+  "mute_source": { "message": "Ajouter des raccourcis pour filter la source d'un tweet dans son menu"},
   "hotlink_item": { "message": "Ajouter un raccourci copiant les liens de tous les médias d'un tweet"},
   "download_item": { "message": "Ajouter un raccourci pour télécharger tous les médias d'un tweet"},
 
