Added messages that I swear were already here.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -58,9 +58,9 @@
   "flash_tweets": { "message": "Make tweets flash in:" },
   "flash_tweets_mentions": { "message": "Mentions columns" },
   "flash_tweets_all": { "message": "Every column" },
-  
+
   "update_title_on_notifications": { "message": "Display an unread tweets/DMs indicator in TweetDeck's tab's title." },
-  
+
   "share_request": { "message": "Request tabs reading permissions" },
   "share_granted": { "message": "Permissions granted" },
   "shared_btd_h1": { "message": "Sharing" },
@@ -85,7 +85,9 @@
   "custom_width_columns": { "message": "Apply a custom width for columns:" },
   "custom_width_size": { "message": "Width (any valid CSS value)" },
   "css_warning": { "message": "Be sure of what you're typing here, don't paste something you don't understand!)" },
-  
+
+  "collapse_columns": { "message": "Add a column header button to collapse and uncollapse columns."},
+
   "regex_filter": { "message": "Enable regular expression support in Mute filters"},
   "regex_filter_notice_text": { "message": "Due to the way TweetDeck's filtering works, expressions are NOT case sensitive!" },
 
