--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -51,6 +51,7 @@
   "css_actions_on_hover": { "message": "Show tweet actions on hover" },
   "css_no_bg_modal": { "message": "Hide background behind fullscreen previews" },
   "css_slim_scrollbars": { "message": "Thinner scrollbars" },
+  "pause_scroll_on_hover": { "message": "Pause column scrolling on hover" },
   "css_show_provider_indicator": { "message": "Show thumbnails' source on top of them" },
   "css_hide_like_rt_indicators": { "message": "Hide Like/RT indicators on top of tweets" },
   "no_hearts": { "message": "Show stars instead of hearts" },
