Adds an action item to get links to tweets / media / quotes in context.
Fixes #40

(cherry picked from commit 12be230)

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -86,6 +86,7 @@
   "custom_width_size": { "message": "Width (any valid CSS value)" },
   "css_warning": { "message": "Be sure of what you're typing here, don't paste something you don't understand!)" },
 
+  "clear_column_action": { "message": "Add a column header button to clear a column."},
   "collapse_columns": { "message": "Add a column header button to collapse and uncollapse columns."},
 
   "regex_filter": { "message": "Enable regular expression support in Mute filters"},
