--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -96,12 +96,11 @@
   "favstar_item": { "message": "Add a \"Show in Favstar\" item in tweets' menu"},
   "mute_hashtags": { "message": "Add shortcuts to mute #hashtags in tweets' menu"},
   "mute_source": { "message": "Add a shortcut to mute the source (application) of a tweet in tweets' menu"},
-  "context_item": { "message": "Add shortcut to link all media / quotes of a tweet in order"},
   "hotlink_item": { "message": "Add shortcut to copy the links of all media in a tweet"},
   "download_item": { "message": "Add shortcut to download all media of a tweet"},
   "download_filename_format": { "message": "Download file name format"},
   "download_filename_format_parameters": { "message": "You can use the following variables: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code>"},
-  "ctrl_changes_interactions__enabled": { "message": "Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download / hotlink will allow you to follow from the"},
+  "ctrl_changes_interactions__enabled": { "message": "Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download will allow you to follow from the"},
   "ctrl_changes_interactions__mode__owner": { "message": "column's owner"},
   "ctrl_changes_interactions__mode__dialog": { "message": "follow dialog"},
 
