update Japanese translations and fix English messages

--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -39,21 +39,36 @@
   "name_typeahead": { "message": "自動補完の時に「@ユーザー名」のみ表示する" },
 
   "title_avatars": { "message": "アイコンと詳細設定" },
+  "old_replies": { "message": "リプライの表示を昔 (2017/03/30 以前) のスタイルに戻す" },
+  "old_search": { "message": "検索システムを以前の状態に戻す (検索をしても新規コラムが追加されなくなります！)"},
   "css_round_pic": { "message": "アイコンを円形表示する" },
   "css_bigger_emojis": { "message": "ツイート内の絵文字を大きくする" },
   "css_collapse_dms": { "message": "ダイレクトメッセージの本文を折りたたむ" },
+  "css_system_fonts": { "message": "UI にシステムフォントを使用する" },
   "css_show_verified": { "message": "アイコン上に認証バッジを表示する" },
   "css_hide_context": { "message": "リプライツイートの 'In reply to' というラベルを非表示にする" },
   "css_actions_on_right": { "message": "ツイートアクションを右寄せにする" },
   "css_actions_on_hover": { "message": "ツイートからカーソルを外した時に、ツイートアクションを非表示にする" },
   "css_no_bg_modal": { "message": "フルスクリーンのプレビュー時にバックグラウンドを非表示にする" },
   "css_slim_scrollbars": { "message": "スクロールバーを細くする" },
+  "pause_scroll_on_hover": { "message": "マウスカーソルがあるカラムの自動スクロールを一時停止する" },
+  "css_show_provider_indicator": { "message": "サムネイルの上部にソースを表示する" },
+  "css_hide_like_rt_indicators": { "message": "ツイート上部の いいね/RT 表示を非表示にする" },
   "no_hearts": { "message": "ハートの代わりにスターを表示する" },
   "rtl_text_style": { "message": "必要に応じて RTL スタイル (アラビア語などの右から左に書くスタイル) を検出して、自動的に適用する" },
   "flash_tweets": { "message": "新しいツイートをフラッシュする" },
   "flash_tweets_mentions": { "message": "メンションコラムのみ" },
   "flash_tweets_all": { "message": "全てのカラム" },
 
+  "update_title_on_notifications": { "message": "未読のツイートまたは DM の件数を TweetDeck のタブタイトルに表示する。" },
+
+  "share_request": { "message": "タブの読み込み権限のリクエスト" },
+  "share_granted": { "message": "権限が与えられました" },
+  "shared_btd_h1": { "message": "共有" },
+  "share_btd_p1": { "message": "「TweetDeck で共有」機能を使用するには、下のボタンをクリックして、必要な権限を許可する必要があります。" },
+  "share_btd_p2": { "message": "Better TweetDeck は、タブ内のコンテンツを読み込んだり、トラッキングしたりすることは <strong>絶対に</strong> ありません。" },
+  "share_btd_p3": { "message": "この権限について詳しく知りたい場合は、<a href=\"https://developer.chrome.com/extensions/tabs\">Google のドキュメント</a> をお読みください。" },
+  "share_btd_p4": { "message": "このページで行った修正は、ブラウザの再起動後に適用されます。" },
   "share_btd_item": { "message": "コンテキストメニューに「TweetDeck で共有」アクションを追加する <small>再起動後に適用されます</small>" },
   "share_short_txt": { "message": "「TweetDeck で共有」アクション実行時に、選択していたテキストを短くする <small>再起動後に適用されます</small>" },
   "no_tco": { "message": "t.co リンクのリダイレクトを除去する" },
@@ -70,6 +85,24 @@
 
   "custom_width_columns": { "message": "カラム幅のカスタマイズ:" },
   "custom_width_size": { "message": "(CSS のプロパティとして有効な任意の値)" },
+  "css_warning": { "message": "自分が入力しようとしているテキストの意味が理解できない場合は、何も入力しないでください！" },
+
+  "clear_column_action": { "message": "カラムのヘッダーにカラムをクリアするボタンを追加する。"},
+  "collapse_columns": { "message": "カラムのヘッダーにカラムの折りたたみを切り替えるボタンを追加する。"},
+
+  "regex_filter": { "message": "ミュートフィルタで正規表現を有効にする"},
+  "regex_filter_notice_text": { "message": "TweetDeck の単語のフィルタリング方法の制限により、正規表現の大文字・小文字は区別されないことに注意してください！" },
+
+  "favstar_item": { "message": "ツイートメニューに \"Show in Favstar\"(Favstar で表示) 項目を表示する"},
+  "mute_hashtags": { "message": "ツイートメニューに #ハッシュタグ をミュートするショートカットを追加する"},
+  "mute_source": { "message": "ツイートメニューにツイートのソース (アプリ) をミュートするショートカットを追加する"},
+  "hotlink_item": { "message": "ツイートに含まれるすべてのメディアへのリンクをコピーするショートカットを追加する"},
+  "download_item": { "message": "ツイートに含まれるすべてのメディアをダウンロードするショートカットを追加する"},
+  "download_filename_format": { "message": "ダウンロードするファイル名のフォーマット"},
+  "download_filename_format_parameters": { "message": "次の変数が利用できます: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code> (それぞれ、ツイートユーザー名、ファイル名、ファイルの拡張子に置換されます)"},
+  "ctrl_changes_interactions__enabled": { "message": "<kbd>Ctrl</kbd> (MacOS では <kbd>Cmd</kbd>) を押しながら、いいね/リツイート/ダウンロードボタンをクリックすることで、ツイート元のアカウントを次の方法でフォローできるようにする: "},
+  "ctrl_changes_interactions__mode__owner": { "message": "カラムのオーナーからフォロー"},
+  "ctrl_changes_interactions__mode__dialog": { "message": "フォローダイアログからフォロー"},
 
   "btd_thx": { "message": "Better TweetDeck をインストールしていただき、ありがとうございます！" },
   "btd_get_started": { "message": "はじめに" },
