--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -85,7 +85,7 @@
 
   "custom_width_columns": { "message": "Apply a custom width for columns:" },
   "custom_width_size": { "message": "Width (any valid CSS value)" },
-  "css_warning": { "message": "Be sure of what you're typing here, don't paste something you don't understand!)" },
+  "css_warning": { "message": "Be sure of what you're typing here, don't paste something you don't understand!" },
 
   "clear_column_action": { "message": "Add a column header button to clear a column."},
   "collapse_columns": { "message": "Add a column header button to collapse and uncollapse columns."},
@@ -100,7 +100,7 @@
   "download_item": { "message": "Add shortcut to download all media of a tweet"},
   "download_filename_format": { "message": "Download file name format"},
   "download_filename_format_parameters": { "message": "You can use the following variables: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code>"},
-  "ctrl_changes_interactions__enabled": { "message": "Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download will allow you to follow from the"},
+  "ctrl_changes_interactions__enabled": { "message": "Holding <kbd>Ctrl</kbd> (or <kbd>Cmd</kbd> on Mac) while clicking: favorite / retweet / download will allow you to follow from the"},
   "ctrl_changes_interactions__mode__owner": { "message": "column's owner"},
   "ctrl_changes_interactions__mode__dialog": { "message": "follow dialog"},
 
