--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -52,6 +52,7 @@
   "pause_scroll_on_hover": { "message": "Arrêter le défilement des colonnes lors du survol" },
   "css_show_provider_indicator": { "message": "Montrer la source des miniatures en sur-impression" },
   "css_hide_like_rt_indicators": { "message": "Masquer l'indicateur de Like/RT au dessus des tweets" },
+  "make_search_columns_first": { "message": "Ajouter les colonnes de recherche avant les autres colonnes" },
   "no_hearts": { "message": "Afficher des étoiles au lieu des coeurs" },
   "rtl_text_style": { "message": "Détecter le texte se lisant de droite à gauche" },
   "flash_tweets": { "message": "Faire 'flasher' les nouveaux tweets dans :" },
@@ -88,19 +89,23 @@
 
   "clear_column_action": { "message": "Ajouter un bouton permettant de vider les colonnes." },
   "collapse_columns": { "message": "Ajouter un bouton permettant de minimiser les colonnes." },
+  "collapse_columns_pause": { "message": "Lorsqu'une colonne est minimisée, le flux est mis en pause, permettant à l'icône de s'allumer en cas de nouveaux tweets." },
+  "uncollapse_columns_unpause": { "message": "Lorsqu'une colonne est ré-ouverte, le flux re-démarre et la colonne naviguera automatiquement jusqu'au dernier tweet au lieu de rester là où vous l'avez laissée" },
   
   "regex_filter": { "message": "Activer le support des expressions régulières dans les filtres."},
   "regex_filter_notice_text": { "message": "De part la manière dont fonctionne TweetDeck, les expressions régulières ne tiennent PAS compte de la casse!" },
 
-  "favstar_item": { "message": "Ajouter un item \"Show on favstar\" dans le menu d'un tweets"},
+  "edit_item": { "message": "Ajouter un item \"Edit\" dans le menu d'un tweet" },
+  "edit_item_note": { "message": "Vous ne pouvais PAS utiliser ceci pour éditer des tweets sans les effacer ! Cette fonction déplace un tweet dans la zone de composition et le supprime, ainsi que tous les favoris et retweets associés !" },
+  "favstar_item": { "message": "Ajouter un item \"Show on favstar\" dans le menu d'un tweet"},
   "mute_hashtags": { "message": "Ajouter des raccourcis pour filter les #hashtags dans le menu d'un tweet"},
   "mute_source": { "message": "Ajouter des raccourcis pour filter la source d'un tweet dans son menu"},
   "hotlink_item": { "message": "Ajouter un raccourci copiant les liens de tous les médias d'un tweet"},
   "download_item": { "message": "Ajouter un raccourci pour télécharger tous les médias d'un tweet"},
   "download_filename_format": { "message": "Format du nom des fichiers téléchargés"},
   "download_filename_format_parameters": { "message": "Vous pouvez utiliser les variables suivantes: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code>"},
-  "ctrl_changes_interactions": { "message": "Tenir <kbd>Ctrl/Cmd</kbd> et cliquer like / retweet / download / hotlink permet de suivre l'auteur du tweet depuis le compte appartenant à la colonne."},
-  "ctrl_changes_interactions__enabled": { "message": "Maintenir <kbd>Ctrl/Cmd</kbd> et cliquer sur like / retweet / download / hotlink permet de suivre l'auteur/autrice du tweet depuis" },
+  "ctrl_changes_interactions": { "message": "Tenir <kbd>Ctrl</kbd> (<kbd>Cmd</kbd> sur Mac) et cliquer like / retweet / download / hotlink permet de suivre l'auteur du tweet depuis le compte appartenant à la colonne."},
+  "ctrl_changes_interactions__enabled": { "message": "Maintenir <kbd>Ctrl</kbd> (<kbd>Cmd</kbd> sur Mac) et cliquer sur like / retweet / download / hotlink permet de suivre l'auteur/autrice du tweet depuis" },
   "ctrl_changes_interactions__mode__owner": { "message": "le compte relié à la colonne" },
   "ctrl_changes_interactions__mode__dialog": { "message": "le dialogue de suivi d'un compte" },
 
