--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -39,7 +39,7 @@
   "name_typeahead": { "message": "L'auto-complétion n'affiche que les tweetnames" },
 
   "title_avatars": { "message": "Avatars & détails" },
-  "old_replies": { "message": "Revenir à l'ancien style de mentions (pré 30/03/2017)" },
+  "old_replies": { "message": "Revenir à l'ancien style de mentions (pré-30/03/2017)" },
   "css_round_pic": { "message": "Rendre les avatars ronds" },
   "css_bigger_emojis": { "message": "Afficher les emojis plus gros dans les tweets" },
   "css_collapse_dms": { "message": "Masquer les DMs lus" },
@@ -65,7 +65,7 @@
   "share_granted": { "message": "Autorisation accordée !" },
   "shared_btd_h1": { "message": "Partage" },
   "share_btd_p1": { "message": "La fonctionnalité de partage requiert l'autorisation de voir les onglets ouverts. Cliquez sur le bouton ci-dessous pour demander ladite autorisation." },
-  "share_btd_p2": { "message": "Better TweetDeck <strong>ne peux pas</strong> lire le contenu de vos onglets ni l'analyser." },
+  "share_btd_p2": { "message": "Better TweetDeck <strong>ne peut pas</strong> lire le contenu de vos onglets ni l'analyser." },
   "share_btd_p3": { "message": "Vous pouvez lire la <a href=\"https://developer.chrome.com/extensions/tabs\">documentation de Google</a> à propos de cette autorisation pour plus de détails" },
   "share_btd_p4": { "message": "Toute modification sur cette page prendra effet après un redémarrage du navigateur" },
   "share_btd_item": { "message": "Ajouter le bouton 'Share on Better TweetDeck' dans le menu contextuel" },
@@ -79,25 +79,25 @@
   "css_hide_url_thumb": { "message": "Masquer les urls relatives aux miniatures (à la Twitter iOS/Android)" },
   "css_no_col_icns": { "message": "Masquer les icônes dans les entêtes de colonnes" },
   "css_small_icns_compose": { "message": "Rendre les boutons plus petits dans l'onglet 'Compose'" },
-  "css_gray_icns_notifs": { "message": "Afficher les icônes de notifications en niveaux de gris." },
+  "css_gray_icns_notifs": { "message": "Afficher les icônes de notifications en niveaux de gris" },
   "css_no_scrollbars": { "message": "Masquer les barres de défilement" },
   "css_system_fonts": { "message": "Utiliser la police du système dans l'interface de TweetDeck" },
 
-  "custom_width_columns": { "message": "Largeur personnalisée pour les colonnes:" },
+  "custom_width_columns": { "message": "Largeur personnalisée pour les colonnes :" },
   "custom_width_size": { "message": "Largeur (doit être valide en CSS)" },
-  "css_warning": { "message": "Soyez sûr de ce que vous entrez. Ne collez pas du code que vous ne comprenez pas!" },
+  "css_warning": { "message": "Soyez sûr de ce que vous entrez. Ne collez pas du code que vous ne comprenez pas !" },
 
-  "clear_column_action": { "message": "Ajouter un bouton permettant de vider les colonnes." },
-  "collapse_columns": { "message": "Ajouter un bouton permettant de minimiser les colonnes." },
-  "collapse_columns_pause": { "message": "Lorsqu'une colonne est minimisée, le flux est mis en pause, permettant à l'icône de s'allumer en cas de nouveaux tweets." },
+  "clear_column_action": { "message": "Ajouter un bouton permettant de vider les colonnes" },
+  "collapse_columns": { "message": "Ajouter un bouton permettant de minimiser les colonnes" },
+  "collapse_columns_pause": { "message": "Lorsqu'une colonne est minimisée, le flux est mis en pause, permettant à l'icône de s'allumer en cas de nouveaux tweets" },
   "uncollapse_columns_unpause": { "message": "Lorsqu'une colonne est ré-ouverte, le flux re-démarre et la colonne naviguera automatiquement jusqu'au dernier tweet au lieu de rester là où vous l'avez laissée" },
   
   "regex_filter": { "message": "Activer le support des expressions régulières dans les filtres."},
   "regex_filter_notice_text": { "message": "De part la manière dont fonctionne TweetDeck, les expressions régulières ne tiennent PAS compte de la casse!" },
 
-  "edit_item": { "message": "Ajouter un item \"Edit\" dans le menu d'un tweet" },
-  "edit_item_note": { "message": "Vous ne pouvais PAS utiliser ceci pour éditer des tweets sans les effacer ! Cette fonction déplace un tweet dans la zone de composition et le supprime, ainsi que tous les favoris et retweets associés !" },
-  "favstar_item": { "message": "Ajouter un item \"Show on favstar\" dans le menu d'un tweet"},
+  "edit_item": { "message": "Ajouter une entrée \"Edit\" dans le menu d'un tweet" },
+  "edit_item_note": { "message": "Vous ne pouvez PAS utiliser ceci pour éditer des tweets sans les effacer ! Cette fonction déplace un tweet dans la zone de composition et le supprime, ainsi que tous les favoris et retweets associés !" },
+  "favstar_item": { "message": "Ajouter une entrée \"Show on favstar\" dans le menu d'un tweet"},
   "mute_hashtags": { "message": "Ajouter des raccourcis pour filter les #hashtags dans le menu d'un tweet"},
   "mute_source": { "message": "Ajouter des raccourcis pour filter la source d'un tweet dans son menu"},
   "hotlink_item": { "message": "Ajouter un raccourci copiant les liens de tous les médias d'un tweet"},
