:wrench: remove the "3" in the name of the extension

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -3,7 +3,7 @@
 		"message": "Emojis, thumbnails and advanced features for https://tweetdeck.twitter.com !"
 	},
 	"appName": {
-		"message": "BetterTweetDeck 3"
+		"message": "BetterTweetDeck"
 	},
   "shareOnTD": { "message": "Share on TweetDeck" },
   "settingsTitle": { "message": "Better TweetDeck Settings" },
