--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -3,7 +3,7 @@
 		"message": "Emojis, miniatures et fonctionnalités avancées pour TweetDeck !"
 	},
 	"appName": {
-		"message": "Better TweetDeck 3"
+		"message": "Better TweetDeck"
 	},
   "shareOnTD": { "message": "Partager sur TweetDeck" },
   "settingsTitle": { "message": "Options Better TweetDeck" },
