--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -46,14 +46,14 @@
   "css_collapse_dms": { "message": "Sbalit přečtené zprávy" },
   "css_system_fonts": { "message": "V rozhraní používat systémové písmo" },
   "css_show_verified": { "message": "Zobrazovat symboly ověřených účtů nad avatary" },
-  "css_hide_context": { "message": "U zmínek schovat označení adresátů" },
+  "css_hide_context": { "message": "U zmínek skrýt označení adresátů" },
   "css_actions_on_right": { "message": "Zobrazit možnosti tweetu napravo" },
   "css_actions_on_hover": { "message": "Zobrazit možnosti tweetu při najetí kurzoru" },
-  "css_no_bg_modal": { "message": "Schovat pozadí za celoobrazovkovými náhledy" },
+  "css_no_bg_modal": { "message": "Skrývat pozadí za celoobrazovkovými náhledy" },
   "css_slim_scrollbars": { "message": "Tenčí posuvníky" },
   "pause_scroll_on_hover": { "message": "Pozastavit posouvání sloupců při najetí kurzoru" },
   "css_show_provider_indicator": { "message": "Zobrazit zdroj náhledů nad nimi" },
-  "css_hide_like_rt_indicators": { "message": "Schovat značky Like/RT nad Tweety" },
+  "css_hide_like_rt_indicators": { "message": "Skrývat značky Like/RT nad Tweety" },
   "make_search_columns_first": { "message": "Přidávat sloupce vyhledávání před první sloupec" },
   "no_hearts": { "message": "Zobrazovat hvězdy místo srdcí" },
   "rtl_text_style": { "message": "Detekovat a při potřebě používat směr zprava doleva" },
@@ -77,11 +77,11 @@
   "thumbnails_from": { "message": "Ukazovat náhledy z:" },
 
   "css_minimal_mode": { "message": "Zapnout 'Minimální' vzhled" },
-  "css_no_play_btn": { "message": "Schovat tlačítko 'přehrát' na náhledech videí" },
-  "css_hide_url_thumb": { "message": "Schovat s náhledem souvisjící odkaz ve tweetech (jako Twitter iOS/Android)" },
-  "css_no_col_icns": { "message": "Schovat ikony v záhlaví sloupců" },
+  "css_no_play_btn": { "message": "Skrýt tlačítko 'přehrát' na náhledech videí" },
+  "css_hide_url_thumb": { "message": "Skrýt s náhledem souvisjící odkaz ve tweetech (jako Twitter iOS/Android)" },
+  "css_no_col_icns": { "message": "Skrýt ikony v záhlaví sloupců" },
   "css_small_icns_compose": { "message": "Zmenšit tlačítka v panelu psaní Tweetu" },
-  "css_no_scrollbars": { "message": "Schovat posuvníky" },
+  "css_no_scrollbars": { "message": "Skrývat posuvníky" },
   "css_gray_icns_notifs": { "message": "Zobrazovat ikony oznámení v odstínech šedi" },
 
   "custom_width_columns": { "message": "Používat vlastní šířku sloupců:" },
@@ -93,51 +93,51 @@
   "collapse_columns_pause": { "message": "Když sbalíte sloupec, zmrazí se vaši časovou osu tak, aby se mohl rozsvítit, když se jeho obsah změní, zatímco je sbalený, a zůstane tam, kde jste jej naposledy zanechali"},
   "uncollapse_columns_unpause": { "message": "Když rozbalíte sloupec, rozmrazí vaši časovou osu, posune se automaticky nahoru namísto posledně zanechaného místa"},
 
-  "regex_filter": { "message": "Povolit podporu pro regulérní výrazy (RegExp) ve filtrech Mute"},
+  "regex_filter": { "message": "Povolit podporu pro regulérní výrazy (RegExp) ve filtrech skrytí uživatelů"},
   "regex_filter_notice_text": { "message": "Kvůli způsobu, jakým pracují filtry TweetDecku, velká a malá písmena regulérní výrazy NEROZLIŠUJÍ!" },
 
   "edit_item": { "message": "Přidat upravování Tweetů k možnostem Tweetu"},
   "edit_item_note": { "message": "Toto nelze použít pro úpravu Tweetů, aniž by se smazaly! Toto hned přesune Tweet do prostoru na psaní a smaže ho spolu se všemi jeho likey a ReTweety." },
+  "mute_hashtags": { "message": "Přidat zkratku pro skrytí #hashtagů k možnostem Tweetu."},
   "favstar_item": { "message": "Přidat \"Zobrazit ve Favstar\" k možnostem Tweetu"},
-  "mute_hashtags": { "message": "Přidat zkratku pro mutenutí #hashtagů k možnostem Tweetu."},
-  "mute_source": { "message": "Add a shortcut to mute the source (application) of a tweet in tweets' menu"},
-  "hotlink_item": { "message": "Add shortcut to copy the links of all media in a tweet"},
-  "download_item": { "message": "Add shortcut to download all media of a tweet"},
-  "download_filename_format": { "message": "Download file name format"},
-  "download_filename_format_parameters": { "message": "You can use the following variables: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code>"},
-  "ctrl_changes_interactions__enabled": { "message": "Holding <kbd>Ctrl</kbd> (or <kbd>Cmd</kbd> on Mac) while clicking: favorite / retweet / download will allow you to follow from the"},
-  "ctrl_changes_interactions__mode__owner": { "message": "column's owner"},
-  "ctrl_changes_interactions__mode__dialog": { "message": "follow dialog"},
+  "mute_source": { "message": "Přidat zkratku pro skrytí zdroje (aplikace) Tweetu k možnostem Tweetu"},
+  "hotlink_item": { "message": "Přidat zkratku pro zkopírování adres všech médií v Tweetu"},
+  "download_item": { "message": "Přidat zkratku pro uložení všech médií v Tweetu"},
+  "download_filename_format": { "message": "Formát ukládaného souboru"},
+  "download_filename_format_parameters": { "message": "Můžete použít následující proměnné: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code>"},
+  "ctrl_changes_interactions__enabled": { "message": "Podržením <kbd>Ctrl</kbd> (nebo <kbd>Cmd</kbd> na Mac) při klikání na: favorite / retweet / uložit vám umožní začít účet sledovat z"},
+  "ctrl_changes_interactions__mode__owner": { "message": "účtu, jemuž patří sloupec"},
+  "ctrl_changes_interactions__mode__dialog": { "message": "okénka pro vybrání sledování"},
 
-  "btd_thx": { "message": "Thanks for installing Better TweetDeck!" },
-  "btd_get_started": { "message": "Let's get started!" },
-  "btd_whatsBTD": { "message": "Better TweetDeck is made to improve your experience on <a href='https://tweetdeck.twitter.com'>tweetdeck.twitter.com</a>!" },
-  "btd_default": { "message": "The default settings have been applied, feel free to modify them to your liking!" },
-  "btd_then": { "message": "Then?" },
-  "btd_follow": { "message": "You should follow <a href='https://twitter.com/BetterTDeck'>@BetterTDeck</a> on Twitter for support, news and trivia about Better TweetDeck!" },
+  "btd_thx": { "message": "Děkujeme, že jste si nainstalovali Better TweetDeck!" },
+  "btd_get_started": { "message": "Pojďme na to!" },
+  "btd_whatsBTD": { "message": "Better TweetDeck byl vytvořen, aby zlepšil prohlížení <a href='https://tweetdeck.twitter.com'>tweetdeck.twitter.com</a>!" },
+  "btd_default": { "message": "Nastavení mají výchozí hodnoty, můžete si je podle sebe upravit!" },
+  "btd_then": { "message": "A dál?" },
+  "btd_follow": { "message": "Začněte sledovat <a href='https://twitter.com/BetterTDeck'>@BetterTDeck</a> na Twitteru pro podporu, novinky a maličkosti o Better TweetDeck!" },
 
-  "sec_infos": { "message": "Informations" },
-  "debug_version": { "message": "Version" },
+  "sec_infos": { "message": "Informace" },
+  "debug_version": { "message": "Verze" },
   "debug_ua": { "message": "User-Agent" },
-  "sec_settings": { "message": "Settings dump" },
+  "sec_settings": { "message": "Dump nastavení" },
 
-  "credits_author":  { "message": "Author" },
-  "credits_contribs":  { "message": "Contributors" },
-  "credits_rsrc":  { "message": "Ressources used" },
-  "credits_links":  { "message": "Links" },
-  "credits_twitter":  { "message": "Better TweetDeck on Twitter" },
-  "credits_bugs":  { "message": "Bugs or suggestions" },
-  "credits_source":  { "message": "Source on GitHub" },
-  "credits_author_website":  { "message": "Author's website" },
+  "credits_author":  { "message": "Autor" },
+  "credits_contribs":  { "message": "Přispěvatelé" },
+  "credits_rsrc":  { "message": "Použité zdroje" },
+  "credits_links":  { "message": "Odkazy" },
+  "credits_twitter":  { "message": "Better TweetDeck na Twitteru" },
+  "credits_bugs":  { "message": "Chyby či návrhy" },
+  "credits_source":  { "message": "Zdroj na GitHubu" },
+  "credits_author_website":  { "message": "Stránky autora" },
 
-  "save_no":  { "message": "No changes" },
-  "save_save":  { "message": "Save changes" },
+  "save_no":  { "message": "Beze změn" },
+  "save_save":  { "message": "Uložit změny" },
 
-  "donate_title":  { "message": "Help me to maintain Better TweetDeck!" },
-  "donate_p3":  { "message": "Thanks a bunch for using Better TweetDeck and helping it live!" },
-  "donate_p2":  { "message": "If you can afford it and feel generous, it would be <strong>wonderful</strong> if you could <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted'>donate on Paypal</a> or <a href='https://patreon.com/eramdam'>support me on Patreon</a> (you can have access to alpha/beta testing of future versions!).<br><br>Even the smallest contribution is helping!" },
-  "donate_p1": { "message": "Better TweetDeck is and always will be <strong>free of charge</strong> but developing it takes time and keeping it live costs money!"},
+  "donate_title":  { "message": "Pomožte mi udržovat Better TweetDeck!" },
+  "donate_p3":  { "message": "Děkuji mockrát, že používáte Better TweetDeck a pomáháte mu přežívat!" },
+  "donate_p2":  { "message": "Pokud si to můžete dovolit a cítíte se štědrými, bylo by <strong>úžasné</strong> pokud byste mohli <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted'>přispět na PayPalu</a> nebo <a href='https://patreon.com/eramdam'>mne podpořit na Patreonu</a> (Dostanete se k alfa/beta testům dalších verzí!).<br><br>I ten nejmenší příspěvek pomáhá!" },
+  "donate_p1": { "message": "Better TweetDeck je a vždy bude <strong>bezplatný</strong> ale jeho vývoj stojí čas a udržování ho naživu stojí peníze!"},
 
-  "notification_title":  { "message": "Better TweetDeck Upgrade" },
-  "notification_upgrade":  { "message": "Better TweetDeck has been upgraded to v{{version}}. Click for more information." }
+  "notification_title":  { "message": "Better TweetDeck Aktualizace" },
+  "notification_upgrade":  { "message": "Better TweetDeck byl aktualizován na v{{version}}. Klikněte pro více informací." }
 }
