--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -123,7 +123,7 @@
 
   "credits_author":  { "message": "Author" },
   "credits_contribs":  { "message": "Contributors" },
-  "credits_rsrc":  { "message": "Ressources used" },
+  "credits_rsrc":  { "message": "Resources used" },
   "credits_links":  { "message": "Links" },
   "credits_twitter":  { "message": "Better TweetDeck on Twitter" },
   "credits_bugs":  { "message": "Bugs or suggestions" },
