Rogue untranslated conjunction
Well this is awkward
This was not supposed to happen

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -1,6 +1,6 @@
 {
   "appDesc": {
-		"message": "Emoji, náhledy a pokročilé funkce for https://tweetdeck.twitter.com !"
+		"message": "Emoji, náhledy a pokročilé funkce pro https://tweetdeck.twitter.com !"
 	},
 	"appName": {
 		"message": "BetterTweetDeck"
