--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -14,8 +14,8 @@
   "sec_content": { "message": "Obsah" },
   "sec_welcome": { "message": "Vítejte" },
   "sec_credits": { "message": "Autoři / O aplikaci" },
-  "sec_changelog": { "message": "Changelog" },
-  "sec_debug": { "message": "Debug Infos" },
+  "sec_changelog": { "message": "Seznam změn" },
+  "sec_debug": { "message": "Ladění" },
   "sec_links": { "message": "Odkazy" },
   "sec_donate": { "message": "Přispějte" },
   "sec_preview": { "message": "Náhled" },
@@ -36,83 +36,83 @@
   "name_inverted": { "message": "@uzivatelskejmeno Celé jméno" },
   "name_username": { "message": "@uzivatelskejmeno" },
   "name_full": { "message": "Celé jméno" },
-  "name_typeahead": { "message": "Našeptávač vyhledávání zobrazuje jen uživatelská jména" },
+  "name_typeahead": { "message": "Našeptávač zobrazuje jen uživatelská jména" },
 
   "title_avatars": { "message": "Avatary & detaily" },
   "old_replies": { "message": "Navrátit ke starému stylu odpovědí (před 30.3.2017)" },
-  "css_round_pic": { "message": "Zaokrouhlit profilové avatary" },
-  "css_bigger_emojis": { "message": "Zvětšit ve tweetech emoji" },
+  "css_round_pic": { "message": "Zakulacené profilové avatary" },
+  "css_bigger_emojis": { "message": "Zvětšit emoji ve tweetech" },
   "css_character_count": { "message": "Vždy zobrazovat počet znaků místo kulatého ukazatele průběhu" },
   "css_collapse_dms": { "message": "Sbalit přečtené zprávy" },
   "css_system_fonts": { "message": "V rozhraní používat systémové písmo" },
-  "css_show_verified": { "message": "Zobrazovat symboly ověřených účtů nad avatary" },
-  "css_hide_context": { "message": "U zmínek skrýt označení adresátů" },
+  "css_show_verified": { "message": "Zobrazovat odznaky ověřených účtů nad avatary" },
+  "css_hide_context": { "message": "U zmínek skrývat označení adresátů" },
   "css_actions_on_right": { "message": "Zobrazit možnosti tweetu napravo" },
-  "css_actions_on_hover": { "message": "Zobrazit možnosti tweetu při najetí kurzoru" },
+  "css_actions_on_hover": { "message": "Zobrazit možnosti tweetu pouze při najetí kurzoru" },
   "css_no_bg_modal": { "message": "Skrývat pozadí za celoobrazovkovými náhledy" },
   "css_slim_scrollbars": { "message": "Tenčí posuvníky" },
   "pause_scroll_on_hover": { "message": "Pozastavit posouvání sloupců při najetí kurzoru" },
-  "css_show_provider_indicator": { "message": "Zobrazit zdroj náhledů nad nimi" },
+  "css_show_provider_indicator": { "message": "Zobrazovat zdroj náhledů nad nimi" },
   "css_hide_like_rt_indicators": { "message": "Skrývat značky Like/RT nad Tweety" },
   "make_search_columns_first": { "message": "Přidávat sloupce vyhledávání před první sloupec" },
   "no_hearts": { "message": "Zobrazovat hvězdy místo srdcí" },
   "rtl_text_style": { "message": "Detekovat a při potřebě používat směr zprava doleva" },
-  "flash_tweets": { "message": "Tweety budou blikat:" },
+  "flash_tweets": { "message": "Nové tweety budou blikat:" },
   "flash_tweets_mentions": { "message": "Ve sloupcích zmínek" },
   "flash_tweets_all": { "message": "Ve všech sloupcích" },
 
-  "update_title_on_notifications": { "message": "Zobrazit počet nepřečtených Tweetů/zpráv v názvu karty/záložky TweetDecku" },
+  "update_title_on_notifications": { "message": "Zobrazovat počet nepřečtených Tweetů/zpráv v názvu panelu TweetDecku" },
 
-  "share_request": { "message": "Požádat o povolení čtení otevřených karet/záložek" },
+  "share_request": { "message": "Požádat o povolení čtení otevřených panelů" },
   "share_granted": { "message": "Povolení uděleno" },
   "shared_btd_h1": { "message": "Sdílení" },
   "share_btd_p1": { "message": "Abyste mohli používat \"Sdílet na TweetDecku\", musíte udělit aplikaci BetterTweetDeck některá povolení, což můžete udělat kliknutím níže" },
-  "share_btd_p2": { "message": "Better TweetDeck <strong>nemůže</strong> přečíst obsah vašich karet/záložek a nesleduje ho." },
+  "share_btd_p2": { "message": "Better TweetDeck <strong>nemůže</strong> přečíst obsah vašich panelů a nesleduje ho." },
   "share_btd_p3": { "message": "Neváhejte si přečíst <a href=\"https://developer.chrome.com/extensions/tabs\">dokumentaci Googlu (anglicky)</a> o tomto povolení pro více detailů." },
-  "share_btd_p4": { "message": "Jakékoli změny na této stránce bude uskutečněna po restartu prohlížeče" },
-  "share_btd_item": { "message": "Přidat možnost 'Sdílet na BetterTweetDecku' do menu pravého myšítka" },
-  "share_short_txt": { "message": "Zkrátit vybraný text při používání vybraného textu u možnosti 'Sdílet na BetterTweetDecku'" },
+  "share_btd_p4": { "message": "Jakékoli změny na této stránce budou uskutečněny po restartu prohlížeče" },
+  "share_btd_item": { "message": "Přidat možnost 'Sdílet na TweetDecku' do menu pravého tlačítka myši" },
+  "share_short_txt": { "message": "Automaticky zkrátit vybraný text při použití možnosti 'Sdílet na TweetDecku'" },
   "no_tco": { "message": "Odstranit přesměrování t.co na odkazech" },
   "no_gif_pp": { "message": "Nepřehrávat GIF avatary" },
-  "thumbnails_from": { "message": "Ukazovat náhledy z:" },
+  "thumbnails_from": { "message": "Zobrazovat náhledy z:" },
 
   "css_minimal_mode": { "message": "Zapnout 'Minimální' vzhled" },
-  "css_no_play_btn": { "message": "Skrýt tlačítko 'přehrát' na náhledech videí" },
-  "css_hide_url_thumb": { "message": "Skrýt s náhledem souvisjící odkaz ve tweetech (jako Twitter iOS/Android)" },
-  "css_no_col_icns": { "message": "Skrýt ikony v záhlaví sloupců" },
-  "css_small_icns_compose": { "message": "Zmenšit tlačítka v panelu psaní Tweetu" },
+  "css_no_play_btn": { "message": "Skrývat tlačítko 'přehrát' na náhledech videí" },
+  "css_hide_url_thumb": { "message": "Skrývat odkazy související s náhledem ve tweetech (jako Twitter iOS/Android)" },
+  "css_no_col_icns": { "message": "Skrývat ikony v záhlaví sloupců" },
+  "css_small_icns_compose": { "message": "Zmenšit tlačítka v panelu psaní tweetu" },
   "css_no_scrollbars": { "message": "Skrývat posuvníky" },
   "css_gray_icns_notifs": { "message": "Zobrazovat ikony oznámení v odstínech šedi" },
 
   "custom_width_columns": { "message": "Používat vlastní šířku sloupců:" },
   "custom_width_size": { "message": "Šířka (jakákoli platná hodnota CSS)" },
-  "css_warning": { "message": "Ujistěte se, že víte, co sem píšete, nevkládejte nic, čemu nerozumíte!" },
+  "css_warning": { "message": "Ujistěte se, že víte, co sem píšete, nevkládejte nic čemu nerozumíte!" },
 
   "clear_column_action": { "message": "Přidat do záhlaví sloupce tlačítko pro vymazání obsahu sloupce"},
   "collapse_columns": { "message": "Přidat do záhlaví sloupce tlačítko pro sbalení a rozbalení sloupců"},
-  "collapse_columns_pause": { "message": "Když sbalíte sloupec, zmrazí se vaši časovou osu tak, aby se mohl rozsvítit, když se jeho obsah změní, zatímco je sbalený, a zůstane tam, kde jste jej naposledy zanechali"},
-  "uncollapse_columns_unpause": { "message": "Když rozbalíte sloupec, rozmrazí vaši časovou osu, posune se automaticky nahoru namísto posledně zanechaného místa"},
+  "collapse_columns_pause": { "message": "Při sbalení sloupce je časová osa zmražena, rozsvítí se při změně obsahu sloupce, a zůstane tam kde jste ji naposledy zanechali"},
+  "uncollapse_columns_unpause": { "message": "Při rozbalení sloupce je časova osa rozmražena, a automaticky se posune na nejnovější tweet"},
 
-  "regex_filter": { "message": "Povolit podporu pro regulérní výrazy (RegExp) ve filtrech skrytí uživatelů"},
-  "regex_filter_notice_text": { "message": "Kvůli způsobu, jakým pracují filtry TweetDecku, velká a malá písmena regulérní výrazy NEROZLIŠUJÍ!" },
+  "regex_filter": { "message": "Povolit podporu pro regulární výrazy (RegExp) ve filtrech skrytí účtů"},
+  "regex_filter_notice_text": { "message": "Kvůli způsobu jakým pracují filtry TweetDecku regulární výrazy NEROZLIŠUJÍ mezi velkými a malými písmeny!" },
 
-  "edit_item": { "message": "Přidat upravování Tweetů k možnostem Tweetu"},
-  "edit_item_note": { "message": "Toto nelze použít pro úpravu Tweetů, aniž by se smazaly! Toto hned přesune Tweet do prostoru na psaní a smaže ho spolu se všemi jeho likey a ReTweety." },
-  "mute_hashtags": { "message": "Přidat zkratku pro skrytí #hashtagů k možnostem Tweetu."},
-  "favstar_item": { "message": "Přidat \"Zobrazit ve Favstar\" k možnostem Tweetu"},
-  "mute_source": { "message": "Přidat zkratku pro skrytí zdroje (aplikace) Tweetu k možnostem Tweetu"},
-  "hotlink_item": { "message": "Přidat zkratku pro zkopírování adres všech médií v Tweetu"},
-  "download_item": { "message": "Přidat zkratku pro uložení všech médií v Tweetu"},
-  "download_filename_format": { "message": "Formát ukládaného souboru"},
+  "edit_item": { "message": "Přidat úpravu tweetů k možnostem tweetu"},
+  "edit_item_note": { "message": "Toto nelze použít pro úpravu tweetů, aniž by se smazaly! Toto hned přesune tweet do prostoru na psaní, a smaže ho spolu se všemi jeho lajky a retweety." },
+  "mute_hashtags": { "message": "Přidat zkratku pro skrytí #hashtagů k možnostem tweetu."},
+  "favstar_item": { "message": "Přidat \"Zobrazit ve Favstar\" k možnostem tweetu"},
+  "mute_source": { "message": "Přidat zkratku pro skrytí aplikace ze které byl tweet odeslán k možnostem tweetu"},
+  "hotlink_item": { "message": "Přidat zkratku pro zkopírování adres všech médií v tweetu"},
+  "download_item": { "message": "Přidat zkratku pro stažení všech médií v tweetu"},
+  "download_filename_format": { "message": "Formát názvu stažených souborů"},
   "download_filename_format_parameters": { "message": "Můžete použít následující proměnné: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code>"},
-  "ctrl_changes_interactions__enabled": { "message": "Podržením <kbd>Ctrl</kbd> (nebo <kbd>Cmd</kbd> na Mac) při klikání na: favorite / retweet / uložit vám umožní začít účet sledovat z"},
+  "ctrl_changes_interactions__enabled": { "message": "Podržení <kbd>Ctrl</kbd> (nebo <kbd>Cmd</kbd> na Mac) při kliknutí na: lajk / retweet / stažení vám umožní sledovat účet z"},
   "ctrl_changes_interactions__mode__owner": { "message": "účtu, jemuž patří sloupec"},
   "ctrl_changes_interactions__mode__dialog": { "message": "okénka pro vybrání sledování"},
 
   "btd_thx": { "message": "Děkujeme, že jste si nainstalovali Better TweetDeck!" },
   "btd_get_started": { "message": "Pojďme na to!" },
   "btd_whatsBTD": { "message": "Better TweetDeck byl vytvořen, aby zlepšil prohlížení <a href='https://tweetdeck.twitter.com'>tweetdeck.twitter.com</a>!" },
-  "btd_default": { "message": "Nastavení mají výchozí hodnoty, můžete si je podle sebe upravit!" },
+  "btd_default": { "message": "Nastavení mají výchozí hodnoty, můžete si je upravit podle sebe!" },
   "btd_then": { "message": "A dál?" },
   "btd_follow": { "message": "Začněte sledovat <a href='https://twitter.com/BetterTDeck'>@BetterTDeck</a> na Twitteru pro podporu, novinky a maličkosti o Better TweetDeck!" },
 
@@ -127,7 +127,7 @@
   "credits_links":  { "message": "Odkazy" },
   "credits_twitter":  { "message": "Better TweetDeck na Twitteru" },
   "credits_bugs":  { "message": "Chyby či návrhy" },
-  "credits_source":  { "message": "Zdroj na GitHubu" },
+  "credits_source":  { "message": "Zdrojový kód na GitHubu" },
   "credits_author_website":  { "message": "Stránky autora" },
 
   "save_no":  { "message": "Beze změn" },
