Fix translation of the word 'tab' and a minor oversight in Czech localization

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -53,7 +53,7 @@
   "css_slim_scrollbars": { "message": "Tenčí posuvníky" },
   "pause_scroll_on_hover": { "message": "Pozastavit posouvání sloupců při najetí kurzoru" },
   "css_show_provider_indicator": { "message": "Zobrazovat zdroj náhledů nad nimi" },
-  "css_hide_like_rt_indicators": { "message": "Skrývat značky Like/RT nad Tweety" },
+  "css_hide_like_rt_indicators": { "message": "Skrývat značky lajku/retweetu nad tweety" },
   "make_search_columns_first": { "message": "Přidávat sloupce vyhledávání před první sloupec" },
   "no_hearts": { "message": "Zobrazovat hvězdy místo srdcí" },
   "rtl_text_style": { "message": "Detekovat a při potřebě používat směr zprava doleva" },
@@ -61,13 +61,13 @@
   "flash_tweets_mentions": { "message": "Ve sloupcích zmínek" },
   "flash_tweets_all": { "message": "Ve všech sloupcích" },
 
-  "update_title_on_notifications": { "message": "Zobrazovat počet nepřečtených Tweetů/zpráv v názvu panelu TweetDecku" },
+  "update_title_on_notifications": { "message": "Zobrazovat počet nepřečtených tweetů a zpráv v názvu karty/panelu TweetDecku" },
 
-  "share_request": { "message": "Požádat o povolení čtení otevřených panelů" },
+  "share_request": { "message": "Požádat o povolení čtení otevřených karet/panelů" },
   "share_granted": { "message": "Povolení uděleno" },
   "shared_btd_h1": { "message": "Sdílení" },
   "share_btd_p1": { "message": "Abyste mohli používat \"Sdílet na TweetDecku\", musíte udělit aplikaci BetterTweetDeck některá povolení, což můžete udělat kliknutím níže" },
-  "share_btd_p2": { "message": "Better TweetDeck <strong>nemůže</strong> přečíst obsah vašich panelů a nesleduje ho." },
+  "share_btd_p2": { "message": "Better TweetDeck <strong>nemůže</strong> přečíst obsah vašich karet/panelů a nesleduje ho." },
   "share_btd_p3": { "message": "Neváhejte si přečíst <a href=\"https://developer.chrome.com/extensions/tabs\">dokumentaci Googlu (anglicky)</a> o tomto povolení pro více detailů." },
   "share_btd_p4": { "message": "Jakékoli změny na této stránce budou uskutečněny po restartu prohlížeče" },
   "share_btd_item": { "message": "Přidat možnost 'Sdílet na TweetDecku' do menu pravého tlačítka myši" },
